--- a/2week/2week_project.ipynb
+++ b/2week/2week_project.ipynb
@@ -23,8 +23,7 @@
     "  type_print(x)\n",
     "  type_print(y)\n",
     "  type_print(z)\n",
-    " ----------------- 
-    "</pre> \n",
+    " ----------------- </pre> \n",
     "  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; \\<class 'str'\\>  \n",
     "  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; \\<class 'float'\\>  \n",
     "  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; \\<class 'list' \\>  \n",
