--- a/2week/2week_project.ipynb
+++ b/2week/2week_project.ipynb
@@ -114,14 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['John', 'Luke', 'Kim', 'Elizabeth', 'Dukakis', 'Agnes', 'Tommy', 'Tom', 'Trump', 'Peter', 'Khan', 'Moses', 'Kimberley']\n"
+      "Agnes\n",
+      "Peter\n",
+      "Kimberley\n",
+      "Luke\n",
+      "Khan\n",
+      "Moses\n",
+      "Tommy\n",
+      "Dukakis\n",
+      "Elizabeth\n",
+      "Kim\n",
+      "Trump\n",
+      "Tom\n",
+      "John\n"
      ]
     }
    ],
@@ -130,15 +142,16 @@
     "    return ( line.strip().split(\",\") for line in open(fileName) )\n",
     "\n",
     "students = streamOfTuples(\"students.txt\")\n",
-    "year4 = streamOfTuples(\"year4.txt\")\n",
-    "GoodGrades = streamOfTuples(\"GoodGrades.txt\")\n",
     "\n",
     "csOrEE = []\n",
     "for i in list(students):\n",
     "    if i[1] == \"CS\" or i[1] == \"EE\":\n",
     "        csOrEE.append(i[0])\n",
-    "        \n",
-    "print(csOrEE)\n"
+    "\n",
+    "csOrEE = set(csOrEE)\n",
+    "\n",
+    "for i in csOrEE:\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -147,11 +160,50 @@
    "source": [
     "### 3(b). 4학년 학생 명단 집합(year4), 좋은 학점 학생 집합(goodGrdages) 등을 각 해당 파일, \"4years.txt\",  \"goodGrades.txt\" 구하고, 이들 집합과 앞에서 구한 전산(CS) 또는 전기전자(EE) 학생 명단 집합(csOrEE)andidates) 을 이용하여 면접대상자 집합 candidates 을 구하고, 면접 대상자 이름을 출력하는 파이썬 코드를 작성하시오. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elizabeth\n",
+      "Tom\n",
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "def streamOfTuples(fileName):\n",
+    "    return ( line.strip().split(\",\") for line in open(fileName) )\n",
+    "\n",
+    "def setOfNames(fileName):\n",
+    "    return { line.strip() for line in open(fileName) }\n",
+    "\n",
+    "students = streamOfTuples(\"students.txt\")\n",
+    "csOrEE = []\n",
+    "for i in list(students):\n",
+    "    if i[1] == \"CS\" or i[1] == \"EE\":\n",
+    "        csOrEE.append(i[0])\n",
+    "\n",
+    "csOrEE = set(csOrEE)\n",
+    "\n",
+    "year4 = setOfNames(\"year4.txt\")\n",
+    "GoodGrades = setOfNames(\"GoodGrades.txt\")\n",
+    "\n",
+    "Candidates = year4 & GoodGrades & csOrEE\n",
+    "\n",
+    "for i in Candidates:\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -165,12 +217,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
+    "hash": "1448b48b023bcc9c3d4a79e814720a10ca6d4244f75e0f7ce4af58f96ba2b7d3"
    }
   }
  },
