--- a/2week/2week_project.ipynb
+++ b/2week/2week_project.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,26 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agnes\n",
-      "Peter\n",
       "Kimberley\n",
-      "Luke\n",
-      "Khan\n",
       "Moses\n",
-      "Tommy\n",
-      "Dukakis\n",
-      "Elizabeth\n",
-      "Kim\n",
-      "Trump\n",
       "Tom\n",
-      "John\n"
+      "Kim\n",
+      "John\n",
+      "Trump\n",
+      "Khan\n",
+      "Agnes\n",
+      "Luke\n",
+      "Tommy\n",
+      "Peter\n",
+      "Elizabeth\n",
+      "Dukakis\n"
      ]
     }
    ],
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "John\n",
       "Elizabeth\n",
-      "Tom\n",
-      "John\n"
+      "Tom\n"
      ]
     }
    ],
