--- a/4week/4week_project.ipynb
+++ b/4week/4week_project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -59,44 +59,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 8, 8]\n"
+      "[8, 5, 3, 2, 9, 1, 4, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
-    "def insertion_sort(list, index=1, num=1, val=0):\n",
-    "    if len(list) == index:\n",
-    "        return list\n",
-    "        \n",
-    "    if index < num:\n",
-    "        list[0] = val\n",
+    "def insertion_sort(list, insert_val=0, error=1, insert_index=1):\n",
+    "    if len(list) == insert_index:\n",
+    "        return list \n",
+    "    # 디버깅용 \n",
+    "    # print(list, \"일 때 insert_index 값 :\",insert_index, \"에러 값 :\", error)\n",
+    "    if error == 1:\n",
+    "        insert_val = list[insert_index]\n",
     "    \n",
-    "    if num == 1:\n",
-    "        val = list[index]\n",
-    "\n",
-    "    if list[index - num + 1] < list[index - num]:\n",
-    "        list[index - num + 1] = list[index - num]\n",
-    "        num += 1\n",
-    "        return insertion_sort(list, index, num, val)\n",
-    "    elif list[index - num + 1] >= list[index - num] and val != 0:\n",
-    "        list[index - num] = val\n",
-    "        num = 1\n",
-    "        index += 1\n",
-    "        return insertion_sort(list, index, num)\n",
+    "    if error > insert_index:\n",
+    "        list[0] = insert_val\n",
+    "        error = 1\n",
+    "        insert_index += 1\n",
+    "        return insertion_sort(list, insert_val, error, insert_index)\n",
+    "    elif insert_val < list[insert_index - error]:\n",
+    "        list[insert_index - error + 1] = list[insert_index - error]\n",
+    "        error += 1\n",
+    "        return insertion_sort(list, insert_val, error, insert_index)\n",
     "    else:\n",
-    "        index += 1\n",
-    "        list[index], list[index - num] = list[index], list[index - num]\n",
-    "        return insertion_sort(list, index)\n",
-    "    \n",
-    "# a = [8, 5, 3, 2, 9, 1, 4, 7, 6]\n",
-    "a = [8, 5, 3]\n",
+    "        list[insert_index - error + 1] = insert_val\n",
+    "        error = 1\n",
+    "        insert_index += 1\n",
+    "        return insertion_sort(list, insert_val, error, insert_index)\n",
+    "  \n",
+    "a = [8, 5, 3, 2, 9, 1, 4, 7, 6]\n",
+    "print(a)\n",
     "result = insertion_sort(a)\n",
     "print(result)"
    ]
@@ -120,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -134,12 +134,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1448b48b023bcc9c3d4a79e814720a10ca6d4244f75e0f7ce4af58f96ba2b7d3"
+    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
    }
   }
  },
