--- a/4week/4week_project.ipynb
+++ b/4week/4week_project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +115,48 @@
     "    <li>0 ~ 20까지, 30개의 정수로 이루어진 랜덤 리스트를 만들고 print 함수를 통해 출력한다.</li>\n",
     "    <li>quick sort를 함수를 만들어 위 리스트를 정렬하고, 정렬한 결과를 print 함수를 통해 출력한다.</li>\n",
     "</ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 13, 6, 2, 8, 2, 4, 19, 17, 10, 7, 18, 2, 15, 10, 1, 16, 15, 18, 16, 17, 10, 19, 20, 2, 14, 12, 18, 17, 8]\n",
+      "[0, 1, 2, 2, 2, 2, 4, 6, 7, 8, 8, 10, 10, 10, 12, 13, 14, 15, 15, 16, 16, 17, 17, 17, 18, 18, 18, 19, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def quick_sort(list):\n",
+    "    if len(list) <= 1:\n",
+    "        return list\n",
+    "    pivot = list[0]\n",
+    "    \n",
+    "    less, equal, greater = [], [], []\n",
+    "    \n",
+    "    for i in range(len(list)):\n",
+    "        if list[i] == pivot:\n",
+    "            equal.append(list[i])\n",
+    "        elif list[i] < pivot:\n",
+    "            less.append(list[i])\n",
+    "        elif list[i] > pivot:\n",
+    "            greater.append(list[i])\n",
+    "    return quick_sort(less) + equal + quick_sort(greater)\n",
+    "\n",
+    "a = []\n",
+    "for i in range(30):\n",
+    "    a.append(random.randint(0, 20))\n",
+    "\n",
+    "print(a)\n",
+    "result = quick_sort(a)\n",
+    "print(result)\n"
    ]
   }
  ],
