--- a/last_mid/2019_mid_math.ipynb
+++ b/last_mid/2019_mid_math.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 이산 수학 중간 고사.  \n",
-    "### $~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$ 2019.10.28.\n",
-    "### 다음의 문제들을 jupyter notebook 파일에 풀어 '학번(영문명).ipynb' 로 스마트 캠퍼스에 올리시오."
+    "#이산 수학 중간 고사.  <br>\n",
+    "$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$ 2019.10.28.<br>\n",
+    "다음의 문제들을 jupyter notebook 파일에 풀어 '학번(영문명).ipynb' 로 스마트 캠퍼스에 올리시오.<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1(25).  정수 list 와 정수 x 가 주어졌을 때,  1) 해당 정수 x 가 주어진 정수 list에 있으면 처음 나타나는 위치가 몇번째 요소 인지 와 이때 까지의 총 몇번 비교했는 지의 총 비교 연산 횟수를 리턴하고, 2)그러지 않으면, \"찾을 수없다.\"  라는 문자열과 총 비교 연산 횟수를 출력하는 프로그램을 파이썬으로 구현하고자 한다.   \n",
-    "### 출력은 다음 에시처럼 되어야 함;  \n",
-    "#### 1) [2,5,9,3,4] 에서 3을 찾는 경우 ; '총 비교 획수는= 4 번이며, 해당 정수 3는(은) 주어진 리스트의  4번째 있다.' \n",
-    "#### 2) [2,5,9,3,4] 에서 7을 찾는 경우 ; '총 비교 획수는= 5 번이며, 해당 요소 7는(은) 주어진 리스트에서 찾을 수없다.' "
+    "1(25).  정수 list 와 정수 x 가 주어졌을 때,  1) 해당 정수 x 가 주어진 정수 list에 있으면 처음 나타나는 위치가 몇번째 요소 인지 와 이때 까지의 총 몇번 비교했는 지의 총 비교 연산 횟수를<br> 리턴하고, 2)그러지 않으면, \"찾을 수없다.\"  라는 문자열과 총 비교 연산 횟수를 출력하는 프로그램을 파이썬으로 구현하고자 한다.   <br>\n",
+    "출력은 다음 에시처럼 되어야 함;  <br>\n",
+    "1) [2,5,9,3,4] 에서 3을 찾는 경우 ; '총 비교 획수는= 4 번이며, 해당 정수 3는(은) 주어진 리스트의  4번째 있다.' <br>\n",
+    "2) [2,5,9,3,4] 에서 7을 찾는 경우 ; '총 비교 획수는= 5 번이며, 해당 요소 7는(은) 주어진 리스트에서 찾을 수없다.' <br>"
    ]
   },
   {
@@ -28,28 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lin_search(lst, x):\n",
     "    ls=list(lst)\n",
     "    for i in range(len(lst)):\n",
-    "        if ls[i]==x:\n",
-    "            return print('총 비교 획수는= {}번이며, 해당 요소 {}는(은) 주어진 리스트의  {}번째에 처음 나타난다.'.format(i+1, x, i+1))\n",
+    "        if ls[i] == x:\n",
+    "            return print('총 비교 획수는 = {}번이며, 해당 요소 {}는(은) 주어진 리스트의 {}번째에 처음 나타난다.'.format(i+1, x, i+1))\n",
     "    return print('총 비교 획수는 {}번이며, 해당 요소 {}는(은) 주어진 리스트에서 찾을 수없다.'.format(i+1, x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "총 비교 획수는= 3번이며, 해당 요소 3는(은) 주어진 리스트의  3번째에 처음 나타난다.\n"
+      "총 비교 획수는 = 3번이며, 해당 요소 3는(은) 주어진 리스트의 3번째에 처음 나타난다.\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -836,11 +836,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "caf1c2fcf97217de91eafa76b907d50f9ea378f5ffbee7f571142d119bb6a771"
+    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
    }
   }
  },
