--- a/mid/all.ipynb
+++ b/mid/all.ipynb
@@ -3219,6 +3219,545 @@
     "for i in range(1,10):\n",
     "    print(fibonacci_iter(i))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5week\n",
+    "기본 반복 알고리즘들의 재귀적 구현 / bubble sort 재귀적 구현 / merge sort 재귀적 구현"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기본 반복 알고리즘들의 재귀적 구현\n",
+    "1. max 구현 (반복 / 재귀)\n",
+    "2. 스트링 역 구하기 (재귀)\n",
+    "3. 리스트에서 특정 값 인덱스 구하기 (반복 / 재귀)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of A = <class 'list'>\n",
+      "A = [8, 2, 7, 8, 8, 5, 9, 4, 9, 5, 6, 7, 7, 9, 6, 7, 9, 0, 9, 0]\n",
+      "최대값  9  은(는) 마지막으로 리스트의 19 번째에 위치한다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. max 구현 반복\n",
+    "def max_pos(X):\n",
+    "    max = 0    \n",
+    "    for (i, item) in enumerate(X):\n",
+    "        if max <= item: # 크거나 같은것 이기 때문에 맨 마지막에 큰 값을 추출한다.\n",
+    "            max = item\n",
+    "            pos = i+1             \n",
+    "    print(\"최대값  %d  은(는) 마지막으로 리스트의 %d 번째에 위치한다.\" %(max, pos))                \n",
+    "    return \n",
+    "\n",
+    "from random import *\n",
+    "import copy\n",
+    "A = choices(list(range(10)), k=20) \n",
+    "print(\"type of A =\", type(A))\n",
+    "print(\"A =\", A)\n",
+    "max_pos(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "최대값  9  은(는) 마지막으로 리스트의 19 번째에 위치한다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. max 구현 재귀 \n",
+    "def max_pos_recursive(X, left, right):   \n",
+    "    if left < 0 or right < 0:     \n",
+    "        print(\"Please take \\\"left >= 0 and right >0  \\\"\")\n",
+    "    if (right - left) == 1:      \n",
+    "        return X[left], left    \n",
+    "    if (right - left) == 2: #종료조건      \n",
+    "        if X[left] <= X[left+1]: # 맨 앞에 있는 값을 찾고 싶으면  이부분을 수정\n",
+    "            return X[left+1], right-1\n",
+    "        else:\n",
+    "            return X[left], left           \n",
+    "    mid = (left + right)//2 # 리스트에 중간 지점 찾기\n",
+    "    # print(\"Search range; X[{}~{}]={} \".format(left, right-1, X[left:right]))\n",
+    "    left_most, left_most_pos = max_pos_recursive(X, left, mid)\n",
+    "    # print(\"Search rangeL; X[{}~{}]={}, most_pos={}, most={}\".format(left, mid-1, X[left:mid], left_most_pos, left_most))  \n",
+    "    right_most, right_most_pos = max_pos_recursive(X, mid, right)\n",
+    "    # print(\"Search rangeR; X[{}~{}]={},most_pos={}, most={},\".format(mid, right-1, X[mid:right], right_most_pos, right_most))\n",
+    "    if  left_most<=right_most: # 맨 앞에 있는 값을 찾고 싶으면  이부분을 수정\n",
+    "            return right_most, right_most_pos\n",
+    "    else:\n",
+    "            return left_most, left_most_pos                \n",
+    "B = copy.deepcopy(A)\n",
+    "print(5//2)\n",
+    "max, pos= max_pos_recursive(B, 0,len(B))\n",
+    "print(\"최대값  {}  은(는) 마지막으로 리스트의 {} 번째에 위치한다.\".format(max, pos+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlroW olleH\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 스트링 역구하기 재귀\n",
+    "def reverse_recursive(string):\n",
+    "    if len(string) == 0:\n",
+    "        return string\n",
+    "    else:\n",
+    "        return reverse_recursive(string[1:]) + string[0]      \n",
+    "    \n",
+    "reverse_me = \"Hello World\"\n",
+    "# print(len(reverse_me))\n",
+    "print(reverse_recursive(reverse_me))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlroW olleH\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 파이썬 자체 함수 이용\n",
+    "txt = reverse_me[::-1]\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 14, 13, 14, 6, 4, 5, 6, 4, 0]\n",
+      "리스트 A 에서 4 는 6 번째 위치한다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 선형탐색 반복 \n",
+    "def LinearSearch_iter(x, L):      \n",
+    "    # for (k, item) in enumerate(L[::-1]): # L을 뒤집는다.   \n",
+    "    for (k, item) in enumerate(L):  \n",
+    "        if item==x:\n",
+    "            return k\n",
+    "    return -1\n",
+    "    \n",
+    "from random import *\n",
+    "import copy\n",
+    "A=choices(list(range(15)), k=10)\n",
+    "print(A)\n",
+    "p=LinearSearch_iter(4,A)\n",
+    "if p!=-1:\n",
+    "    print(\"리스트 {} 에서 {} 는 {} 번째 위치한다.\".format('A', 4, p+1 ))\n",
+    "else:\n",
+    "    # print(\"리스트 {} 에서 {} 는 {} 번째 위치한다.\".format('A', 4, p+1 ))\n",
+    "    print(\"리스트 {} 에서 {} 는 없습니다.\".format('A', 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 14, 13, 14, 6, 4, 5, 6, 4, 0]\n",
+      "리스트 B 에서 4 는 6 번째 위치한다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 선형 탐색 재귀 작은 위치 \n",
+    "def LinearSearch_recursive(x, L, left, right):          \n",
+    "    if right == left:\n",
+    "        return -1\n",
+    "    if (right - left)==1:     \n",
+    "        if x == L[left]:\n",
+    "            found=True\n",
+    "            return left\n",
+    "        else:\n",
+    "            return -1\n",
+    "    mid=(left+right)//2\n",
+    "    l=LinearSearch_recursive(x, L, left, mid)\n",
+    "    # print(\"search_l=L[{}:{}], l={}\".format(left, mid, l))\n",
+    "    \n",
+    "    if l!=-1:\n",
+    "        return l\n",
+    "    else:\n",
+    "        r= LinearSearch_recursive(x, L, mid, right)    \n",
+    "        # print(\"search_r=L[{}:{}], r={}\".format(mid, right, r))        \n",
+    "        if r!=-1:\n",
+    "            return r\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "B=copy.deepcopy(A)\n",
+    "print(B)\n",
+    "x=4\n",
+    "found=False\n",
+    "p=LinearSearch_recursive(x,B, 0, len(A))\n",
+    "if p!=-1:\n",
+    "    print(\"리스트 {} 에서 {} 는 {} 번째 위치한다.\".format('B', x, p+1 ))\n",
+    "else:\n",
+    "    print(\"리스트 {}에서 {} 는 없습니다.\".format('B', x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 14, 13, 14, 6, 4, 5, 6, 4, 0]\n",
+      "리스트 B 에서 4 는 9 번째 위치한다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 선형 탐색 재귀 큰 위치 \n",
+    "def LinearSearch_recursive(x, L, left, right):          \n",
+    "    if right == left:\n",
+    "        return -1\n",
+    "    if (right - left)==1:     \n",
+    "        if x == L[left]:\n",
+    "            found=True\n",
+    "            return left\n",
+    "        else:\n",
+    "            return -1\n",
+    "    mid=(left+right)//2\n",
+    "    l=LinearSearch_recursive(x, L, mid, right)\n",
+    "    # print(\"search_l=L[{}:{}], l={}\".format(left, mid, l))\n",
+    "    \n",
+    "    if l!=-1:\n",
+    "        return l\n",
+    "    else:\n",
+    "        r= LinearSearch_recursive(x, L, left, mid)    \n",
+    "        # print(\"search_r=L[{}:{}], r={}\".format(mid, right, r))        \n",
+    "        if r!=-1:\n",
+    "            return r\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "B=copy.deepcopy(A)\n",
+    "print(B)\n",
+    "x=4\n",
+    "found=False\n",
+    "p=LinearSearch_recursive(x,B, 0, len(A))\n",
+    "if p!=-1:\n",
+    "    print(\"리스트 {} 에서 {} 는 {} 번째 위치한다.\".format('B', x, p+1 ))\n",
+    "else:\n",
+    "    print(\"리스트 {}에서 {} 는 없습니다.\".format('B', x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### bublle sort 재귀적 구현\n",
+    "1. 반복적 방법\n",
+    "2. 재귀적 방법 1\n",
+    "3. 재귀적 방법 2\n",
+    "4. 파이썬 내장 함수 이용 재귀적 방법 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list A = [16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n",
+      "list B = [16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n",
+      "list C = [16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n",
+      "list D = [16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n",
+      "list E = [16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import *\n",
+    "import copy\n",
+    "A = sample(range(0, 20), 10)\n",
+    "B = A  #shallow copy\n",
+    "C = copy.deepcopy(A)  #deep copy \n",
+    "D = copy.deepcopy(A)  #deep copy \n",
+    "E = copy.deepcopy(A)  #deep copy \n",
+    "\n",
+    "print(\"list A =\", A)\n",
+    "print(\"list B =\", B)\n",
+    "print(\"list C =\", C)\n",
+    "print(\"list D =\", D)\n",
+    "print(\"list E =\", E)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 4, 10, 11, 12, 13, 14, 16]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. 반복적 방법\n",
+    "def sort_bubble(L):\n",
+    "    n=len(L)\n",
+    "    for i in range(n-1):\n",
+    "        for j in range(n-i-1):\n",
+    "            if L[j]> L[j+1]:\n",
+    "                L[j+1], L[j]=L[j], L[j+1]\n",
+    "    return L\n",
+    "sort_bubble(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 4, 10, 11, 12, 13, 14, 16]\n",
+      "[16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 4, 10, 11, 12, 13, 14, 16]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. 재귀적 방법 1\n",
+    "def max2(L):\n",
+    "    Maximum=0\n",
+    "    index=0\n",
+    "    for i, item in enumerate(L):\n",
+    "        if item>Maximum:\n",
+    "            Maximum=item\n",
+    "            index=i\n",
+    "    return Maximum, index    \n",
+    "\n",
+    "def bubble_sort_recursive(L, n):\n",
+    "       # print(list, n)\n",
+    "    if n==1:  \n",
+    "        return L\n",
+    "    M, index=max2(L)\n",
+    "    L.pop(index)   \n",
+    "    return bubble_sort_recursive(L, n-1)+ list([M])\n",
+    "\n",
+    "n=10\n",
+    "print(B)\n",
+    "C=copy.deepcopy(D)\n",
+    "print(C)\n",
+    "bubble_sort_recursive(C, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 재귀적 방법 2\n",
+    "def max3(L):    \n",
+    "    for j in range(len(L)-1):\n",
+    "        if L[j]>L[j+1]:\n",
+    "            L[j+1], L[j]=L[j], L[j+1]\n",
+    "    return L[len(L)-1], len(L)-1     \n",
+    "def bubble_sort_recursive2(L, n):\n",
+    "       # print(list, n)\n",
+    "    if n==1:  \n",
+    "        return L\n",
+    "    M, index=max3(L)\n",
+    "    L.pop(index)   \n",
+    "    return bubble_sort_recursive(L, n-1)+ list([M])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 4, 10, 11, 12, 13, 14, 16]\n",
+      "[16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n",
+      "[16, 1, 4, 12, 11, 14, 0, 10, 13, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 4, 10, 11, 12, 13, 14, 16]"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. 파이썬 내장 함수 이용 재귀적 방법\n",
+    "def bubble_sort_recursive3(L, n):\n",
+    "       # print(list, n)\n",
+    "    if n==1:  \n",
+    "        return L\n",
+    "    M, l = max3(L)\n",
+    "    p=L.index(M)\n",
+    "    L.pop(p)   \n",
+    "    return bubble_sort_recursive(L, n-1)+ list([M])\n",
+    "n=10\n",
+    "print(B)\n",
+    "C=copy.deepcopy(D)\n",
+    "print(C)\n",
+    "bubble_sort_recursive2(C, n)\n",
+    "\n",
+    "n=10\n",
+    "C=copy.deepcopy(D)\n",
+    "print(C)\n",
+    "bubble_sort_recursive3(C, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### merge sort 재귀적 구현\n",
+    "1. 반복적 방법\n",
+    "2. 재귀적 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 6, 7, 9, 10, 12, 15]"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. 반복이용\n",
+    "def merge(L1, L2):\n",
+    "    result = []\n",
+    "    while (len(L1) > 0) and (len(L2) > 0):\n",
+    "            if L1[0] < L2[0]:\n",
+    "                result.append(L1[0]) \n",
+    "                L1.pop(0)\n",
+    "            else:\n",
+    "                result.append(L2[0])\n",
+    "                L2.pop(0)\n",
+    "    \n",
+    "    result += L1\n",
+    "    result += L2\n",
+    "    return result\n",
+    "L1=[3,7,9,12]\n",
+    "L2=[2,5,6,10,15]\n",
+    "merge(L1,L2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 6, 7, 9, 10, 12, 15]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. 재귀이용\n",
+    "def msort_recursive(x):\n",
+    "    if len(x) < 2:\n",
+    "        return x\n",
+    "    mid = len(x)//2 \n",
+    "    y = msort_recursive(x[:mid])\n",
+    "    z = msort_recursive(x[mid:])\n",
+    "    return merge(y,z)\n",
+    "\n",
+    "a=[3, 7, 9, 12, 2, 5, 6, 10, 15]\n",
+    "msort_recursive(a)"
+   ]
   }
  ],
  "metadata": {
