--- a/mid/all2.ipynb
+++ b/mid/all2.ipynb
@@ -1,8 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 중간고사 대비 각종 구현 함수들\n",
+    "1. quick sort\n",
+    "   1. 재귀함수\n",
+    "   2. 최적화된 재귀함수\n",
+    "2. merge sort \n",
+    "   1. 반복 함수\n",
+    "   2. 최적화된 merge sort\n",
+    "3. 재귀 함수 적용 예시\n",
+    "   1. 위치 탐색 \n",
+    "   2. 2진수로 변환\n",
+    "   3. 배열의 합\n",
+    "   4. 정수 0 부터 n까지 합구하기\n",
+    "   5. 1부터 n까지 곱구하기\n",
+    "   6. $x^n$ 구하기 \n",
+    "   7. 피보나치 수열\n",
+    "   8. 최대공약수 최소공배수\n",
+    "   9. 하노이 탑"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. quick sort"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +41,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,6 +106,13 @@
     "a = [9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
     "quick_sort(a)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. merge_sort"
    ]
   },
   {
@@ -165,14 +202,21 @@
     "            temp.append(arr[h])\n",
     "            h += 1\n",
     "\n",
-    "        for i in range(low, high):\n",
-    "            arr[i] = temp[i - low]\n",
-    "\n",
-    "    return sort(0, len(arr))\n",
-    "\n",
+    "        else:\n",
+    "            equal_arr.append(num)\n",
+    "    return quick_sort(lesser_arr) + equal_arr + quick_sort(greater_arr)\n",
+    "a = [9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+    "quick_sort(a)\n",
     "a = [9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
     "merge_sort(a)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 재귀함수 적용 예시"
    ]
   },
   {
@@ -460,9 +504,7 @@
     "    #탈출 조건\n",
     "    if num == 1:\n",
     "        print(\"{}에서 {}로 {} 번째 원반 이동\".format(_from, _to, num))\n",
-    "        return\n",
-    "\n",
-    "    hanoi(num-1, _from, _to, _by)\n",
+    "        return$x^2   $x^2.$ \\in\n",
     "    print(\"{}에서 {}로 {} 번째 원반 이동\".format(_from, _to, num))\n",
     "    hanoi(num-1, _by, _from, _to)\n",
     "\n",
