--- a/mid/all2.ipynb
+++ b/mid/all2.ipynb
@@ -20,7 +20,8 @@
     "   6. $x^n$ 구하기 \n",
     "   7. 피보나치 수열\n",
     "   8. 최대공약수 최소공배수\n",
-    "   9. 하노이 탑"
+    "   9. 하노이 탑\n",
+    "4. 멱집합 재귀함수 구현 power set"
    ]
   },
   {
@@ -504,7 +505,7 @@
     "    #탈출 조건\n",
     "    if num == 1:\n",
     "        print(\"{}에서 {}로 {} 번째 원반 이동\".format(_from, _to, num))\n",
-    "        return$x^2   $x^2.$ \\in\n",
+    "        return\n",
     "    print(\"{}에서 {}로 {} 번째 원반 이동\".format(_from, _to, num))\n",
     "    hanoi(num-1, _by, _from, _to)\n",
     "\n",
@@ -515,11 +516,66 @@
     "            break\n",
     "        hanoi(numOfTray, 'A', 'B', 'C')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 멱집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['neigh', 'category', 'purpose']\n",
+      "['category', 'purpose']\n",
+      "['neigh', 'purpose']\n",
+      "['purpose']\n",
+      "['neigh', 'category']\n",
+      "['category']\n",
+      "['neigh']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classical_recursive_two(elems):\n",
+    "\n",
+    "    \"\"\" Given a list of elements return a generator \n",
+    "\n",
+    "    that will generate all the subsets \"\"\"\n",
+    "\n",
+    "    if len(elems) <= 1:\n",
+    "\n",
+    "        yield elems\n",
+    "\n",
+    "        yield []\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        for item in classical_recursive_two(elems[1:]):\n",
+    "\n",
+    "            yield [elems[0]] + item\n",
+    "\n",
+    "            yield item\n",
+    "\n",
+    "sth = [\"neigh\", \"category\", \"purpose\"]\n",
+    "\n",
+    "for x in classical_recursive_two(sth):\n",
+    "\n",
+    "    print(x)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -533,12 +589,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
+    "hash": "caf1c2fcf97217de91eafa76b907d50f9ea378f5ffbee7f571142d119bb6a771"
    }
   }
  },
