--- a/mid/all.ipynb
+++ b/mid/all.ipynb
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1698,11 +1698,11 @@
    ],
    "source": [
     "# 다음은 앞의 Algorithm 설계 가이드라인에 따라,  설계해본  자연수 n의 제곱근, 즉 $\\sqrt{n}$을 구하는 알고리즘 인 'sqrt2' 함수입니다.  \n",
-    "def sqrt2(n, tolerance=0.001, max_iter=20):\n",
+    "def sqrt2(n, tolerance=0.001, max_iter=20): # tolerance는 오차\n",
     "    x_iter =1.0\n",
     "    n_iter = 0\n",
     "    while (abs(x_iter*x_iter-n) > tolerance) and (n_iter < max_iter):\n",
-    "        x_iter = x_iter - (x_iter*x_iter-n)/(2*x_iter) #   x= x- f(x)/f'(x)         \n",
+    "        x_iter = x_iter - (x_iter*x_iter-n)/(2*x_iter) #   x= x- f(x)/f'(x) 뉴튼  iternation         \n",
     "        n_iter += 1\n",
     "        print(\"%d : %1.10f ; %1.10f\" %(n_iter, x_iter , x_iter**2))\n",
     "    if (abs(x_iter*x_iter-n) > tolerance) and (n_iter == max_iter):   \n",
@@ -3762,7 +3762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -3776,12 +3776,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
+    "hash": "caf1c2fcf97217de91eafa76b907d50f9ea378f5ffbee7f571142d119bb6a771"
    }
   }
  },
