--- a/6week/6week_project.ipynb
+++ b/6week/6week_project.ipynb
@@ -100,11 +100,27 @@
     "a=[7,3,4,2,6,10]\n",
     "pigeonsort(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "코드 동작은 다음과 같다.\n",
+    "- pigeonsort(list) 함수는 인자로 리스트를 받는다.\n",
+    "- 리스트에서 최소값과 최대값의 _min, _max에 저장한다.\n",
+    "- _min, _max 로 _range를 구한다(_min - _max + 1)\n",
+    "- _range 크기의 holes 리스트를 0으로 초기화해서 생성한다.\n",
+    "- 현재 _min은 2이며 holes 리스트에 0 번째 index는 2의 값을 의미하게 되며 \n",
+    "- _holes 리스트의 마지막 index는 _max 값인 10을 의미하게 된다.\n",
+    "- 인자로 들어온 list 의 값을 확인하고 holes 리스트에 해당하는 index의 값을 +1 해준다.\n",
+    "- holes의 index의 최소값 _min을 더해주면 인자로 들어온 list가 정렬된 형태로 바뀌게 된다.\n",
+    "- 중복으로 값이 들어와도 해결이 가능하다."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -118,12 +134,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1448b48b023bcc9c3d4a79e814720a10ca6d4244f75e0f7ce4af58f96ba2b7d3"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
