--- a/6week/6week_project.ipynb
+++ b/6week/6week_project.ipynb
@@ -20,10 +20,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "집합 A = {'d', 'a', 'b', 'e', 'c'}로 만든 사전식 리스트는 [['a', 'a', 'a'], ['a', 'a', 'b'], ['a', 'a', 'c'], ['a', 'a', 'd'], ['a', 'a', 'e'], ['a', 'b', 'b'], ['a', 'b', 'c'], ['a', 'b', 'd'], ['a', 'b', 'e'], ['a', 'c', 'c'], ['a', 'c', 'd'], ['a', 'c', 'e'], ['a', 'd', 'd'], ['a', 'd', 'e'], ['a', 'e', 'e'], ['b', 'b', 'b'], ['b', 'b', 'c'], ['b', 'b', 'd'], ['b', 'b', 'e'], ['b', 'c', 'c'], ['b', 'c', 'd'], ['b', 'c', 'e'], ['b', 'd', 'd'], ['b', 'd', 'e'], ['b', 'e', 'e'], ['c', 'c', 'c'], ['c', 'c', 'd'], ['c', 'c', 'e'], ['c', 'd', 'd'], ['c', 'd', 'e'], ['c', 'e', 'e'], ['d', 'd', 'd'], ['d', 'd', 'e'], ['d', 'e', 'e'], ['e', 'e', 'e']]\n",
+      "집합  A={'d', 'a', 'b', 'e', 'c'} 에서 원소 r=3 개를 뽑아 사전식으로 늘어 놓는 모든 경우의 수=35\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from cgitb import reset\n",
+    "\n",
+    "\n",
+    "def combination_recursive(n,r):\n",
+    "    if n< r:\n",
+    "        return print(\" Please take n greater r\")\n",
+    "    if r==0:\n",
+    "        return 1\n",
+    "    return combination_recursive(n-1,r)+combination_recursive(n-1,r-1)\n",
+    "\n",
+    "def sortfunc(list, defalut):\n",
+    "    a = {}\n",
+    "    for i in list:\n",
+    "        count = 0\n",
+    "        for j in defalut:\n",
+    "            if i != j:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                a[i] = count\n",
+    "    return set(sorted(a,key=lambda x:a[x]))\n",
+    "\n",
+    "A=['a', 'b', 'c', 'd', 'e']\n",
+    "\n",
+    "result = []\n",
+    "temp = []\n",
+    "for i in range(len(A)):\n",
+    "    for j in range(i, len(A)):\n",
+    "        for k in range(j, len(A)):\n",
+    "            temp.append(A[i])\n",
+    "            temp.append(A[j])\n",
+    "            temp.append(A[k])\n",
+    "            check = sortfunc(temp, A)\n",
+    "            if not check in result:\n",
+    "                result.append(temp)\n",
+    "            temp = []\n",
+    "print(\"집합 A = {}로 만든 사전식 리스트는 {}\".format(set(A), result))\n",
+    "print(\"집합  A={} 에서 원소 r=3 개를 뽑아 사전식으로 늘어 놓는 모든 경우의 수={}\".format(set(A), len(result)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -134,12 +182,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
    }
   }
  },
