--- a/15week/15주차_실습.ipynb
+++ b/15week/15주차_실습.ipynb
@@ -880,7 +880,7 @@
    "metadata": {},
    "source": [
     "#### 또한, 강의노트에서 다룬 [그림 3] 그래프에 대해 그래프에 대해  상기 Prim  MST 알고리즘 적용을 살펴 보기로 합시다.¶\n",
-    "![Altext](./fig15-prim_ex.png)"
+    "![Altext](fig15-prim_ex.png)"
    ]
   },
   {
@@ -935,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Altext](./fig15-prim_ex_sol.png)"
+    "![Altext](fig15-prim_ex_sol.png)"
    ]
   },
   {
@@ -1209,6 +1209,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Alttext](fig15-graph.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 실습 2.  "
    ]
   },
@@ -1218,11 +1225,18 @@
    "source": [
     "### 실습 2.  상기 [그림 3] 의 그래프에 대해  \"networkx'  파이썬 패키지를 사용하여 Prim 및 Kruskal 알고리즘 기반 MST 를 각각구해 보고, 그 결과가 앞의 알고리즘들을 적용한 결과와 같음을 살펴보시오."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alttext](fig15-prim_ex.png)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1236,7 +1250,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
+   }
   }
  },
  "nbformat": 4,
