--- a/7week/7주차_실습.ipynb
+++ b/7week/7주차_실습.ipynb
@@ -41,7 +41,7 @@
     "    # Instance method\n",
     "    def greet(self, loud=False):\n",
     "        if loud:\n",
-    "            print ('HELLO, %s!' % self.name.upper())\n",
+    "            print ('HELLO, %s!' % self.name.upper()) # 대문자로 바꿔주는 함수\n",
     "        else:\n",
     "            print ( 'Hello, %s' % self.name )\n",
     "\n",
