--- a/10week/10주차_실습.ipynb
+++ b/10week/10주차_실습.ipynb
@@ -147,12 +147,11 @@
     "from pandas import DataFrame\n",
     "\n",
     "connectivity = {'B':  [0, 0, 1, 1, 1, 1],\n",
-    "           'E':  [0, 0, 1, 1, 0, 0],\n",
-    "           'F' : [1, 1, 0, 1, 1, 0],\n",
-    "           'L': [1, 1, 1, 0, 1, 1], \n",
-    "           'N': [1, 0, 1, 1, 0, 1], \n",
-    "           'S': [1, 0, 0, 1, 1, 0]\n",
-    "            }\n",
+    "                'E':  [0, 0, 1, 1, 0, 0],\n",
+    "                'F' : [1, 1, 0, 1, 1, 0],\n",
+    "                'L': [1, 1, 1, 0, 1, 1], \n",
+    "                'N': [1, 0, 1, 1, 0, 1], \n",
+    "                'S': [1, 0, 0, 1, 1, 0]}\n",
     "cities = ['B', 'E', 'F', 'L', 'N' , 'S']\n",
     "connectivity_graph = DataFrame(connectivity, columns=['B', 'E', 'F', 'L', 'N', 'S'], index=cities)\n",
     "connectivity_graph"
@@ -268,7 +267,7 @@
    "outputs": [],
    "source": [
     "V1 = ('B', 'E', 'F', 'L', 'N',  'S' )\n",
-    "E1=[('B', 'F'), ('B', 'L'), ('B', 'N'), ('B', 'S'),('E', 'F'),('E', 'L'), ('F', 'L'), ('F', 'N'), ('L', 'N'), ('L', 'S'), ('N', 'S')]\n"
+    "E1 = [('B', 'F'), ('B', 'L'), ('B', 'N'), ('B', 'S'),('E', 'F'),('E', 'L'), ('F', 'L'), ('F', 'N'), ('L', 'N'), ('L', 'S'), ('N', 'S')]\n"
    ]
   },
   {
@@ -341,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sort dictionary\n",
     "def sort_dictionary(adjL):\n",
-    "    tmp=dict(sorted(adjL.items()))\n",
-    "  #  print(tmp)\n",
+    "    tmp = dict(sorted(adjL.items()))\n",
+    "    print(tmp)\n",
     "    for s in tmp:\n",
     "      #  print(s)\n",
     "      tmp[s].sort()\n",
@@ -357,9 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'B': ['F', 'L', 'N', 'S'], 'E': ['F', 'L'], 'F': ['L', 'N', 'B', 'E'], 'L': ['B', 'E', 'F', 'N', 'S'], 'N': ['B', 'F', 'L', 'S'], 'S': ['B', 'L', 'N']}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -371,7 +377,7 @@
        " 'S': ['B', 'L', 'N']}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1767,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1775,11 +1781,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "caf1c2fcf97217de91eafa76b907d50f9ea378f5ffbee7f571142d119bb6a771"
+    "hash": "d53987ecb595d47b858fb20818fc57333593e153a0e3e1d0f7ed0487b17d3604"
    }
   }
  },
